--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,33 @@
 body {
     font-family: "Roboto", sans-serif;
-    color: ;
-    background-color: #ffffff;
+    color: #2e2f42;
+    background-color: #fff;
+}
+
+.page-nav .link {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+
+header-logo {
+    font-family: "Raleway", sans-serif;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 117%;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        color: #2e2f42;
+}
+
+header-logo-web {
+    font-family: "Raleway", sans-serif;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 117%;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        color: #4d5ae5;
 }
