--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,6 @@ body {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
-    text-decoration: none;
 }
 
 .contact-link:hover,
@@ -81,7 +80,6 @@ body {
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: #ffffff;
-    cursor: pointer;
 }
 
 .hero-button:hover,
@@ -161,7 +159,7 @@ font-family: "Roboto", sans-serif;
         letter-spacing: 0.02em;
         text-align: center;
         color: #2e2f42;
-        text-transform: capitalize;
+         text-transform: capitalize;
 }
 
 .project-title {
@@ -187,24 +185,18 @@ font-family: "Roboto", sans-serif;
     background: #2e2f42;
 }
 
-.footer-logo {
+.logo {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
-    line-height: 117%;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #2e2f42;
-}
-
-.footer-logo-web {
-    font-family: "Raleway", sans-serif;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 117%;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+}
+
+.logo-text {
+    color: #2e2f42;
 }
 
 .footer-text {
