--- a/css/styles.css
+++ b/css/styles.css
@@ -21,11 +21,7 @@ body {
 }
 
 .nav-list {
-    list-style: none;
-    display: flex;
-    gap: 20px;
-    padding: 0;
-    margin: 0;
+   
 }
 
 .nav-link {
@@ -196,7 +192,7 @@ font-family: "Roboto", sans-serif;
 }
 
 .logo-text {
-    color: #2e2f42;
+    color: #f4f4fd;
 }
 
 .footer-text {
